--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
           <div class="image">
-            <img src="/images/icon-supervisor.svg" alt="magnifying glass">
+            <img src="images/icon-supervisor.svg" alt="magnifying glass">
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
             <h3>Team Builder</h3>
             <p>Scans our talent network to create the optimal team for your project</p>
             <div class="image">
-              <img src="/images/icon-team-builder.svg" alt="team builder">
+              <img src="images/icon-team-builder.svg" alt="team builder">
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <h3>Karma</h3>
             <p>Regularly evaluates our talent to ensure quality</p>
             <div class="image">
-              <img src="/images/icon-karma.svg" alt="Karma">
+              <img src="images/icon-karma.svg" alt="Karma">
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
           <h3>Calculator</h3>
           <p>Uses data from past projects to provide better delivery estimates</p>
           <div class="image">
-            <img src="/images/icon-calculator.svg" alt="Calculator">
+            <img src="images/icon-calculator.svg" alt="Calculator">
           </div>
         </div>
       </div>
